--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     testImplementation "androidx.test:core-ktx:1.2.0"
     testImplementation "androidx.test.ext:junit-ktx:1.1.1"
     testImplementation 'org.robolectric:robolectric:4.3.1'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.7.2'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
