--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
     compileSdkVersion 30
@@ -48,20 +49,26 @@ dependencies {
     implementation 'androidx.paging:paging-runtime-ktx:3.0.0-alpha02'
     implementation "androidx.preference:preference-ktx:1.1.1"
 
-    // Room
+    // Room (Offline Persistence)
     implementation "androidx.room:room-runtime:2.2.5"
     implementation "androidx.room:room-ktx:2.2.5" // support for coroutines
     kapt "androidx.room:room-compiler:2.2.5"
 
-    // Retrofit
+    // Retrofit (Networking)
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    // Image Loading
+    // Coil (Image Loading)
     implementation 'io.coil-kt:coil:0.11.0'
 
-    // Coroutines
+    // Coroutines (Asynchronous Operations)
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.6'
+
+    // Hilt (Dependency Injection)
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
 
     // For Unit Tests
     testImplementation 'junit:junit:4.12'
